# MD_Dumper_CLI

./: Build_Linux.sh  Build_Windows.sh  CMakeLists.txt  Informations.txt  LICENSE  MD_Dumper  MD_Dumper_GUI.bat  README.md  flashlist.c  flashlist.csv  flashlist.h  gameslist.csv  main.c  md_dumper_main.h  md_dumper_read.h  md_dumper_write.h  sfd-LICENSE  sms-gg_crc.csv
.github/workflows/: cmake-multi-platform.yml  linux_cmake.yml  windows_cmake.yml
Extras/: pce_crc.csv
cmake/: FindLIBUSB1.cmake  FindLibusb1.cmake
images/: GUI.xcf
windows_deps/: libusb-1.0.26.7z  libusb-1.0.27-rc2.7z  libusb-1.0.27.7z
windows_deps/files/lib/: libSDL2.la  libSDL2_test.la  libSDL2main.la
windows_deps/files/lib/cmake/SDL2/: sdl2-config-version.cmake
windows_deps/files/lib/pkgconfig/: libusb-1.0.pc  sdl2.pc
